[project]
name = "template"
version = "0.0.0"
description = "A minimal python template using ruff and pytest."

[project.optional-dependencies]
lint = ["ruff"]
test = ["pytest"]

[tool.ruff]
src = []

[tool.ruff.lint]
# I001: Import block is un-sorted or un-formatted
# E731: Do not assign a lambda expression, use a def 
fixable = ["I001"]
ignore = ["E731"]
select = ["E", "F", "I001"]
extend-select = [
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"